Iframe funcionando, qrcode com logo adicionada
