# backend/outputSwagger.json
@@ -725,10 +725,6 @@
     },
     "/pix/payload/{idAluguel}": {
       "get": {
-        "tags": [
-          "QrCodePix"
-        ],
-        "summary": "Retorna JSON com payload e metadados",
         "description": "",
         "parameters": [
           {
@@ -749,10 +745,6 @@
     },
     "/pix/qrcode/{idAluguel.png}": {
       "get": {
-        "tags": [
-          "QrCodePix"
-        ],
-        "summary": "Retorna imagem PNG do QR Code",
         "description": "",
         "parameters": [
           {
@@ -773,10 +765,6 @@
     },
     "/pix/payload/avulso/{idPagamento}": {
       "get": {
-        "tags": [
-          "QrCodePix"
-        ],
-        "summary": "Retorna JSON com payload e metadados do pagamento avulso",
         "description": "",
         "parameters": [
           {
@@ -797,14 +785,50 @@
     },
     "/pix/qrcode/avulso/{idPagamento.png}": {
       "get": {
-        "tags": [
-          "QrCodePix"
-        ],
-        "summary": "Retorna imagem PNG do QR Code do pagamento avulso",
         "description": "",
         "parameters": [
           {
             "name": "idPagamento.png",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/pix/iframe/{idAluguel}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "idAluguel",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/pix/iframe/avulso/{idPagamento}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "idPagamento",
             "in": "path",
             "required": true,
             "schema": {
